# attack-flow-agent

./: .gitignore  Makefile  PRODUCT_STORY.md  README.md  VISION_EXPANDED_PLATFORM.md  docker-compose.yml
agent/: .env.example  Dockerfile  pyproject.toml  requirements.txt
agent/app/: config.py  main.py
agent/app/api/: router.py
agent/app/api/endpoints/: flows.py  generate.py  health.py  jobs.py
agent/app/api/middleware/: auth.py  rate_limit.py  tenant.py
agent/app/api/schemas/: requests.py  responses.py
agent/app/core/: errors.py  jobs.py  narrative.py  pipeline.py  tlp.py
agent/app/integrations/: ctix_client.py
agent/app/integrations/ttp_chainer/: adapter.py  converter.py
agent/app/models/: flow.py  job.py  stix.py
agent/tests/: conftest.py  test_converter.py  test_ctix_client.py  test_narrative.py  test_tlp.py
agent/tests/fixtures/: sample_report.json  sample_stix_bundle.json
docs/: API_REFERENCE.md  PROXY_INTEGRATION.md  README.md  WORKFLOW_TECHNICAL.md
frontend/: package-lock.json  package.json  vite.config.ts
infra/terraform/: alb.tf  ecr.tf  ecs.tf  iam.tf  main.tf  monitoring.tf  outputs.tf  secrets.tf  security.tf  terraform.tfvars.example  variables.tf
webapp/: AWS_DEPLOY.md  INTERNAL_WORKFLOW_GUIDE.md  NETLIFY.md  README.md
webapp/backend/: .env.example  fly.toml  requirements.txt
webapp/backend/app/: analyze.py  config.py  graph_connectivity.py  main.py  rules.py  schemas.py  upload.py
webapp/frontend/: index.html  netlify.toml  package-lock.json  package.json
webapp/frontend/src/: App.tsx  main.tsx
(+33 files in other folders)
